[gd_scene load_steps=9 format=3 uid="uid://cnui3gpbmr30b"]

[ext_resource type="Script" uid="uid://ci70wukkn8hju" path="res://scripts/ui/inventory_ui.gd" id="1_7nagc"]
[ext_resource type="FontFile" uid="uid://d2ubj0jppunc4" path="res://assets/fonts/PKMN-Mystery-Dungeon.ttf" id="1_bsps8"]
[ext_resource type="Texture2D" uid="uid://bkhra72hhlri0" path="res://assets/textures/particles/blood_splatter.png" id="2_drsq2"]
[ext_resource type="FontFile" uid="uid://dg7tlal1r4m0a" path="res://assets/fonts/GhastlyPixe.ttf" id="3_ldtye"]
[ext_resource type="FontFile" uid="uid://sci6uvpk7sue" path="res://assets/fonts/mythic-pixels.ttf" id="4_ldtye"]
[ext_resource type="Texture2D" uid="uid://sfaknxkbl54c" path="res://assets/textures/items/flashlight.jpg" id="4_nuief"]

[sub_resource type="Theme" id="Theme_xk7lq"]
default_font = ExtResource("1_bsps8")
default_font_size = 16
Label/constants/outline_size = 6

[sub_resource type="Theme" id="Theme_ldtye"]
default_font = ExtResource("3_ldtye")
default_font_size = 16

[node name="Inventory" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xk7lq")
script = ExtResource("1_7nagc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_ldtye")
theme_override_font_sizes/font_size = 16
text = "INVENTORY"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Inventory" type="ItemList" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 4
theme_override_constants/v_separation = 1
theme_override_constants/h_separation = 7
theme_override_fonts/font = ExtResource("4_ldtye")
theme_override_font_sizes/font_size = 5
item_count = 3
max_columns = 3
icon_mode = 0
fixed_icon_size = Vector2i(32, 32)
item_0/text = "old key"
item_0/icon = ExtResource("4_nuief")
item_1/text = "old pee"
item_1/icon = ExtResource("4_nuief")
item_2/text = "knife"
item_2/icon = ExtResource("4_nuief")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_ldtye")
theme_override_font_sizes/normal_font_size = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("3_ldtye")
theme_override_font_sizes/font_size = 16
text = "STATUS:"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_drsq2")

[node name="ExitButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 4
text = "close"

[node name="ItemSelect" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 62.0
offset_bottom = 88.0
theme = SubResource("Theme_ldtye")

[node name="MarginContainer" type="MarginContainer" parent="ItemSelect"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ItemSelect/MarginContainer"]
layout_mode = 2

[node name="UseButton" type="Button" parent="ItemSelect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Item"

[node name="EquipButton" type="Button" parent="ItemSelect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip Item"

[node name="BackButton" type="Button" parent="ItemSelect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="empty_clicked" from="MarginContainer/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_inventory_empty_clicked"]
[connection signal="item_activated" from="MarginContainer/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_inventory_item_activated"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_inventory_item_selected"]
[connection signal="pressed" from="MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ItemSelect/MarginContainer/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="ItemSelect/MarginContainer/VBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="ItemSelect/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
